# Razion_Bot

./: README.md
api/: pyproject.toml  tes.py
api/api/: __init__.py  __main__.py
razi/: pyproject.toml
razi/razi/: bot.py
razi/razi/config/: config.py
razi/razi/handlers/: handlers.py
razi/razi/states/: states.py
razi/tests/: test_razi.py
