[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["MoMo <pipenpodlaps@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
requests = "^2.31.0"
googletrans = "3.1.0a0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
