[tool.poetry]
name = "razi"
version = "0.1.0"
description = ""
authors = ["MoMo <pipenpodlaps@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
pika = "^1.3.2"
aio-pika = "^9.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
razi_start = "razi.bot:main"
